Made regristration page pretty
- Added CSS Style Sheet
- Changed Form to name, email, and psswd
- Added stock image (replace soon - copyright)

--- a/Tobiesell/users/templates/base.html
+++ b/Tobiesell/users/templates/base.html
@@ -1,6 +1,7 @@
 <!-- templates/base.html -->
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="style.css">
 
 <head>
   <meta charset="utf-8">
