Forgot some changes

--- a/Tobiesell/users/templates/registration.html
+++ b/Tobiesell/users/templates/registration.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- (c) TobieLearn William Ramsay All Rights Reserved -->
 
 <!--
 {% extends "base.html" %}
@@ -37,7 +38,7 @@
             <label for="password"> 
                 <div> Password:</div> 
             </label> 
-            <input type="password" id="password" name="password" placeholder="password"> 
+            <input type="password" id="password" name="password" placeholder="Password"> 
 
             <button type="submit">Register</button>
         </form>
