--- a/Tobiesell/users/templates/style.css
+++ b/Tobiesell/users/templates/style.css
@@ -51,7 +51,7 @@ body::before {
 
 h1 {
     font-size: 2.5em;
-    color: #333;
+    color: #4D4D4D;
     font-weight: bold;
 }
 
@@ -104,7 +104,7 @@ button[type="submit"] {
     border: 2px solid #007BFF; /* Blue border */
     border-radius: 5px;
     color: white;
-    font-size: 1.2em;
+    font-size: 1em;
     cursor: pointer;
     transition: background-color 0.3s ease, border-color 0.3s ease;
 }
