--- a/Tobiesell/allstaticfiles/home.css
+++ b/Tobiesell/allstaticfiles/home.css
@@ -1,88 +1,202 @@
 /* Basic Reset */
 
-label{ 
-    color:black; 
-}
 header{ 
     display:flex; 
-    justify-content:space-between;
-    align-items:center;
+    align-items:center; 
     width:auto; 
-
-}
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-ul {
-  position: relative;
-  display: flex;
 }
 
-li {
-  list-style: none;
-}
 
 /* Navbar Styling */
-.navbar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #232f3e;
-    padding: 10px 20px;
-    height: 60px;
-    color:white; 
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+
+body {
+  font-family: "Roboto", sans-serif;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing:border-box; 
+  
 }
 
-/* Logo */
-.logo img {
-    height: 40px;
+
+ul{ 
+    position:relative; 
+    display:flex; 
+}
+li{ 
+    list-style:none;
 }
 
-/* Address Section */
-.address {
-    display: flex;
-    flex-direction: column;
-    color: white;
+/*----------bootstrap-navbar-css------------*/
+.navbar-logo {
+
+  padding: 0; 
+  color: #fff;
+}
+.navbar-mainbg {
+position:relative; 
+text-align:center;
+  background-color: #5161ce;
+  justify-content:space-between; 
+  padding-left: 40px;
+}
+#navbarSupportedContent {
+  overflow: hidden;
+  position: relative;
+}
+#navbarSupportedContent ul {
+  padding: 0px;
+  margin: 0px;
+}
+#navbarSupportedContent ul li a i {
+  margin-right: 10px;
+}
+#navbarSupportedContent li {
+  list-style-type: none;
+  float: left;
+}
+#navbarSupportedContent ul li a {
+  color: rgba(255, 255, 255, 0.5);
+  text-decoration: none;
+  font-size: 15px;
+  display: block;
+  padding: 20px 20px;
+  transition-duration: 0.6s;
+  transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  position: relative;
+}
+#navbarSupportedContent > ul > li.active > a {
+  color: #5161ce;
+  background-color: transparent;
+  transition: all 0.7s;
+}
+#navbarSupportedContent a:not(:only-child):after {
+  content: "\f105";
+  position: absolute;
+  right: 20px;
+  top: 10px;
+  font-size: 14px;
+  font-family: "Font Awesome 5 Free";
+  display: inline-block;
+  padding-right: 3px;
+  vertical-align: middle;
+  font-weight: 900;
+  transition: 0.5s;
+}
+#navbarSupportedContent .active > a:not(:only-child):after {
+  transform: rotate(90deg);
+}
+.hori-selector {
+  display: inline-block;
+  position: absolute;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  transition-duration: 0.6s;
+  transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  background-color: #fff;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  margin-top: 10px;
+}
+.hori-selector .right,
+.hori-selector .left {
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  background-color: #fff;
+  bottom: 10px;
+}
+.hori-selector .right {
+  right: -25px;
+}
+.hori-selector .left {
+  left: -25px;
+}
+.hori-selector .right:before,
+.hori-selector .left:before {
+  content: "";
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #5161ce;
+}
+.hori-selector .right:before {
+  bottom: 0;
+  right: -25px;
+}
+.hori-selector .left:before {
+  bottom: 0;
+  left: -25px;
+}
+
+@media (min-width: 992px) {
+  .navbar-expand-custom {
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+  }
+  .navbar-expand-custom .navbar-nav {
+    -ms-flex-direction: row;
+    flex-direction: row;
+  }
+  .navbar-expand-custom .navbar-toggler {
+    display: none;
+  }
+  .navbar-expand-custom .navbar-collapse {
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -ms-flex-preferred-size: auto;
+    flex-basis: auto;
+  }
+}
+
+@media (max-width: 991px) {
+  #navbarSupportedContent ul li a {
+    padding: 12px 30px;
+  }
+  .hori-selector {
+    margin-top: 0px;
     margin-left: 10px;
-    font-size: 12px;
+    border-radius: 0;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+  }
+  .hori-selector .left,
+  .hori-selector .right {
+    right: 10px;
+  }
+  .hori-selector .left {
+    top: -25px;
+    left: auto;
+  }
+  .hori-selector .right {
+    bottom: -25px;
+  }
+  .hori-selector .left:before {
+    left: -25px;
+    top: -25px;
+  }
+  .hori-selector .right:before {
+    bottom: -25px;
+    left: -25px;
+  }
 }
 
-.address strong {
-    font-size: 14px;
+.nav_2_container{
+    position:relative; 
+    display:flex;
+    transition:background-color 0.3 ease; 
+    background-color:black;
+    height:500px; 
+    z-index:1; 
+    
 }
 
-
-/* Search Bar */
-.search-bar {
-    flex-grow: 1;
-    display: flex;
-    align-items: center;
-    margin:0 25px;
-}
-
-.search-bar input {
-    width:50%;
-    padding: 8px;
-    border-radius: 0px 0 0 0px;
-    border: none;
-    font-size: 14px;
-}
-
-.search-bar button {
-    padding: 8px 16px;
-    background-color: #febd69;
-    border: none;
-    border-radius: 0 4px 4px 0;
-    cursor: pointer;
-    font-size: 14px;
-    margin-right:0 0; 
-}
-
-.search-bar button:hover {
-    background-color: #f90;
-}
 
 .all-button{
     width:50px; 
@@ -100,113 +214,105 @@ li {
 .all-button:hover{ 
     background-color:rgb(128,128,128)
 }
-/* Language Selector */
-
-.language-container{
-    margin-left: 10px; 
-    
-}
-.language-container select{
-    padding: 5px;
-    border: none;
-    background-color: #232f3e;
-    color: white;
-    cursor: pointer;
-    font-size: 14px;
-}
-
-.language-container select option {
-    color: black;
-}
-.language-image{ 
-    width:20px; 
-
-}
-.language-image img{ 
-    width:100%; 
-}
-
-/* Address Popup Styles */
-
-.addresspopup {
-        position:absolute ;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%); 
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        z-index: 1000;
-        padding: 20px;
-        display:none; /* Hidden by default */
-    }
-
-/* Overlay for popup */
-
-.popup-content {
-    margin-top:650px; 
-    background-color: #ffffff; /* White */
-    padding: 20px;
-    border-radius: 5px;
-    width: 300px; /* Adjust width as needed */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    position:relative;
-    flex-direction:column; 
-    align-items:center;
-    display:flex; 
-
-}
-/* Form Styles */
-.form-group {
-    margin-bottom: 15px;
-}
 
 
-.form-control {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc; /* Light Gray */
-    border-radius: 4px;
+
+/* Footer */ 
+
+.footer-position{ 
+    padding:10px 0;
+    position:relative; 
+    margin-top:auto; 
+
+
 }
 
-.state_control{ 
-    color:black; 
-    width:50%; 
-    padding:10px; 
-    border: 1px solid #ccc; 
-    border-radius: 4px; 
+.footer-clean {
+margin-top:auto; 
+padding:50px 0; 
+background-color:#fff;
+color:#4b4c4d;
 }
 
-.btn-save {
-    background-color: #27ae60; /* Green */
-    color: black; /* White */
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-    border-radius: 4px;
+.footer-clean h3 {
+  margin-top:0;
+  margin-bottom:12px;
+  font-weight:bold;
+  font-size:16px;
 }
 
-.btn-save:hover {
-    background-color: #219653; /* Darker Green */
+.footer-clean ul {
+  padding:0; 
+  list-style:none;
+  line-height:1.6;
+  font-size:14px;
+  margin-bottom:0;
 }
 
-.close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    cursor: pointer;
+.footer-clean ul a {
+  color:inherit;
+  text-decoration:none;
+  opacity:0.8;
 }
-.close-btn:before {
-    content: "\f00d"; /* Font Awesome 'times' icon */
-    font-family: "FontAwesome";
-    color: #333;
+
+.footer-clean ul a:hover {
+  opacity:1;
 }
-.nav_2_container{
-    display:flex;
-    align-items:center;
-    transition:background-color 0.3 ease; 
-    background-color:black;
-    height:500px; 
-    z-index:1; 
-    
+
+.footer-clean .item.social {
+  text-align:right;
 }
+
+@media (max-width:767px) {
+  .footer-clean .item {
+    text-align:center;
+    padding-bottom:20px;
+  }
+}
+
+@media (max-width: 768px) {
+  .footer-clean .item.social {
+    text-align:center;
+  }
+}
+
+.footer-clean .item.social > a {
+  font-size:24px;
+  width:40px;
+  height:40px;
+  line-height:40px;
+  display:inline-block;
+  text-align:center;
+  border-radius:50%;
+  border:1px solid #ccc;
+  margin-left:10px;
+  margin-top:22px;
+  color:inherit;
+  opacity:0.75;
+}
+
+.footer-clean .item.social > a:hover {
+  opacity:0.9;
+}
+
+@media (max-width:991px) {
+  .footer-clean .item.social > a {
+    margin-top:40px;
+  }
+}
+
+@media (max-width:767px) {
+  .footer-clean .item.social > a {
+    margin-top:10px;
+  }
+}
+
+.footer-clean .copyright {
+  margin-top:14px;
+  margin-bottom:0;
+  font-size:13px;
+  opacity:0.6;
+}
+
 
 
